[gd_scene load_steps=17 format=3 uid="uid://bbb0m5s5jgnl2"]

[ext_resource type="Script" path="res://Items/crystal/crystal.gd" id="1_84ilw"]
[ext_resource type="PackedScene" uid="uid://c0bqbwk5cf7lp" path="res://Interactions/interaction_area/interaction_area.tscn" id="1_g4tx7"]
[ext_resource type="Resource" uid="uid://dr8w84ic6vg28" path="res://Items/crystal_blue.tres" id="2_vfyss"]
[ext_resource type="PackedScene" uid="uid://dcvta531jc25s" path="res://General_Nodes/HurtBox/hurt_box.tscn" id="3_y8s8a"]
[ext_resource type="Texture2D" uid="uid://fpa6ykx5be24" path="res://Assets/Tileset/Sprites/Tileset_Abyss_Floor.png" id="5_wmdy4"]
[ext_resource type="AudioStream" uid="uid://i3fuvgiwbbu6" path="res://Assets/Audio/suck_1.wav" id="6_17ri8"]
[ext_resource type="AudioStream" uid="uid://btefahkf32ntl" path="res://Assets/Audio/glass_breaking.wav" id="7_w5115"]
[ext_resource type="PackedScene" uid="uid://dmigfjcjd3r57" path="res://General_Nodes/PersistentDataHelper/persistent_data_handler.tscn" id="8_rmkd7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3yxx"]
size = Vector2(25, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_byl3e"]
atlas = ExtResource("5_wmdy4")
region = Rect2(64, 144, 32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_vdnqf"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mph35"]
radius = 22.0

[sub_resource type="Animation" id="Animation_4oda3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hycmb"]
resource_name = "destroyed"
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_w5115")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.470588)]
}

[sub_resource type="Animation" id="Animation_jyol8"]
resource_name = "triggered"
length = 1.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_17ri8")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CrystalHurtBox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0.0784314, 0.0784314, 1), Color(1, 0.196078, 0.196078, 1), Color(1, 0.294118, 0.294118, 1), Color(1, 0, 0, 1), Color(1, 0.0784314, 0.0784314, 1), Color(1, 0.196078, 0.196078, 1), Color(1, 0.294118, 0.294118, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gt62x"]
_data = {
"RESET": SubResource("Animation_4oda3"),
"destroyed": SubResource("Animation_hycmb"),
"triggered": SubResource("Animation_jyol8")
}

[node name="Crystal" type="Node2D"]
process_mode = 3
y_sort_enabled = true
script = ExtResource("1_84ilw")
item_data = ExtResource("2_vfyss")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1.5, 6)
shape = SubResource("RectangleShape2D_n3yxx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_byl3e")

[node name="CrystalHurtBox" parent="." instance=ExtResource("3_y8s8a")]
unique_name_in_owner = true
visible = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrystalHurtBox"]
shape = SubResource("CircleShape2D_vdnqf")
disabled = true
debug_color = Color(0.825935, 0.39742, 0, 0.42)

[node name="InteractionArea" parent="." instance=ExtResource("1_g4tx7")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_mph35")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gt62x")
}

[node name="IsDestroyed" parent="." instance=ExtResource("8_rmkd7")]
